--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,58 +1,26 @@
-/*подключение переменные цвета и шрифта*/
-@import "./utils/_variables";
+//utils
+@import './utils/reset';
+@import './utils/variables';
 
-/*сброс стилей*/
-@import "./utils/_reset";
+//common
+@import './common/button';
+@import './common/container';
+@import './common/current';
+@import './common/logo';
+@import './common/modal';
+@import './common/section';
+@import './common/social';
+@import './common/visually-hidden';
 
-/*подключение стилей контейнира*/
-@import "./common/_container";
-
-/*подключение стилей секции*/
-@import "./common/_section";
-
-/*visually-hidden*/
-@import "./common/_visual-hidden";
-
-/*подключение стилей current*/
-@import "./common/_current";
-
-
-/*подключение стилей header*/
-@import "./components/_header";
-
-/*подключение стилей logo*/
-@import "./common/_logo";
-
-/*подключение стилей hero*/
-@import "./components/_hero";
-
-/*подключение стилей для buttons*/
-@import "./common/_button";
-
-/*подключение стилей для секции details*/
-@import "./components/_details";
-
-/*подключение стилей для секции doings*/
-@import "./components/_doing";
-
-/*подключение стилей для секции team*/
-@import "./components/_team";
-
-/*подключение стилей для секции clients*/
-@import "./components/_clients";
-
-/*подключение стилей для секции footer*/
-@import "./components/_footer";
-
-/*подключение стилей для секции modal*/
-@import "./common/_modal";
-
-/*подключение стилей для секции modal-form*/
-@import "./common/_modal-form";
-
-/*подключение стилей для секции gallery btn*/
-@import "./components/_gallery-btn";
-
-/*подключение стилей для секции gallery list*/
-@import "./components/_gallery-cards";
-cccc
+//components
+@import './components/clients';
+@import './components/details';
+@import './components/doing';
+@import './components/filter';
+@import './components/footer-form';
+@import './components/footer';
+@import './components/gallery';
+@import './components/header';
+@import './components/hero';
+@import './components/modal-form';
+@import './components/team';
