--- a/sass/common/_button.scss
+++ b/sass/common/_button.scss
@@ -1,27 +1,26 @@
-.hero__btn,
-.modal__form--submit,
-.footer__form--submit {
-    padding: 10px 32px;
+.button {
+  padding: 10px 32px;
+  margin: 0 auto;
 
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    text-decoration: none;
-    letter-spacing: 0.06em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    color: var(--primary-first-text-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-decoration: none;
+  letter-spacing: 0.06em;
+
+  color: var(--primary-first-text-color);
+  background-color: var(--main-btn-background);
+  border: transparent;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
     background-color: var(--main-btn-background);
-    border: transparent;
-    border-radius: 4px;
-    cursor: pointer;
-
-    /*transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);*/
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.hero__btn:hover,
-.hero__btn:focus {
-    background-color: var(--main-btn-background);
+  }
 }
