--- a/sass/common/_section.scss
+++ b/sass/common/_section.scss
@@ -1,4 +1,16 @@
 /*падинг на секции*/
 .section {
-    padding: 94px 0;
+  padding: 94px 0;
+}
+
+.section--title {
+  margin-bottom: 50px;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--primary-second-text-color);
 }
