--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,45 +1,33 @@
-.clients__tittle {
-    margin-bottom: 50px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-    letter-spacing: 0.03em;
-
-    color: var(--primary-second-text-color);
+.clients {
+  display: flex;
 }
 
-.clients__list {
-    display: flex;
-}
-
-.clients__item:not(:last-child) {
+.clients__item {
+  &:not(:last-child) {
     margin-right: 30px;
+  }
 }
 
 .clients__link {
-    display: flex;
-    width: 170px;
-    height: 92px;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  width: 170px;
+  height: 92px;
+  align-items: center;
+  justify-content: center;
 
-    border: 1px solid var(--icon-color);
-    border-radius: 4px;
-    color: var(--icon-color);
+  border: 1px solid var(--icon-color);
+  border-radius: 4px;
+  color: var(--icon-color);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.clients__link:hover,
-.clients__link:focus {
+  &:hover,
+  &:focus {
     color: var(--accent-color);
     border: 1px solid var(--accent-color);
+  }
 }
 
 .clients__icon {
-    fill: currentColor;
-    width: 106px;
-    height: 60px;
+  fill: currentColor;
 }
