--- a/sass/components/_doing.scss
+++ b/sass/components/_doing.scss
@@ -1,52 +1,50 @@
 .doing__section {
-    padding-top: 0;
+  padding-top: 0;
 }
 
 .doing__title {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
 
-    color: var(--primary-second-text-color);
+  color: var(--primary-second-text-color);
 }
 
 .doing__list {
-    display: flex;
-}
-
-.doing__item:not(:last-child) {
-    margin-right: 30px;
-    position: relative;
+  display: flex;
 }
 
 .doing__item {
+  position: relative;
+  &:not(:last-child) {
+    margin-right: 30px;
     position: relative;
+  }
 }
 
 .doing__box {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 70px;
-    background: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
 }
 
 .doing__text {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 
-    color: var(--primary-first-text-color);
-
+  color: var(--primary-first-text-color);
 }
