--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,70 +1,65 @@
 .header {
-    border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 .header__container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-.header__nav {
-    display: flex;
-    align-items: center;
+.navigation {
+  display: flex;
+  align-items: center;
 }
 
-.header__list {
-    display: flex;
-    margin-left: auto;
+.navigation__list {
+  display: flex;
+  margin-left: auto;
 }
 
-.header__item:not(:last-child) {
-    margin-right: 50px;
+.navigation__item:not(:last-child) {
+  margin-right: 50px;
 }
 
-.header__link {
-    position: relative;
-    padding: 32px 0;
-    display: block;
+.navigation__link {
+  position: relative;
+  padding: 32px 0;
+  display: block;
 
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 
-    color: var(--primary-second-text-color);
+  color: var(--primary-second-text-color);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.header__tel--link,
-.header__mail--link {
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--main-text-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header__icon--mail,
-.header__icon--tel {
-    margin-right: 10px;
-    fill: currentColor;
-    width: 16px;
-    height: 12px;
-}
-
-.header__icon--tel {
-    width: 10px;
-    height: 16px;
-}
-
-.header__link:hover,
-.header__link:focus,
-.header__tel--link:hover,
-.header__tel--link:focus,
-.header__mail--link:hover,
-.header__mail--link:focus {
+  &:hover,
+  &:focus {
     color: var(--accent-color);
+  }
 }
 
+.navigation__link--contacts {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.logo__navigation {
+  margin-right: 93px;
+}
+
+.navigation__icon--contacts {
+  margin-right: 10px;
+  fill: currentColor;
+}
